# EODBot

./: .replit  Pasted-2024-12-11-15-33-02-49-0c89e804-User-home-runner-fcc95e5a-2830-4af0-8e12-d14414c35536-pythonlibs-l-1733949291554.txt  Pasted-2024-12-11-21-55-42-INFO-apscheduler-scheduler-Adding-job-tentatively-it-will-be-properly-sche-1733954395785.txt  Pasted-Objective-Build-a-Slack-bot-that-automates-End-of-Day-EOD-reporting-for-our-contractors-The-syst-1733867859229.txt  Pasted-kill-lsof-t-i-3000-2-dev-null-true-gunicorn-app-app-bi000-workers-4-threads-2-wo-1733949396714.txt  app.py  config.py  extensions.py  firebase_client.py  models.py  openai_client.py  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  routes.py  scheduler.py  sheets_client.py  slack_bot.py  slack_client.py
services/: scheduler.py  sheets.py
slack_bot/: __init__.py  handlers.py  messages.py
static/css/: custom.css  style.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  index.html  missed_submissions.html  report_detail.html  team.html  user_profile.html
