[project]
name = "repl-nix-eodslackbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "firebase-admin>=6.6.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "openai>=1.57.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "slack-sdk>=3.33.5",
    "sqlalchemy>=2.0.36",
]
