[project]
name = "repl-nix-eodslackbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.0",
    "email-validator>=2.2.0",
    "firebase-admin>=6.6.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "gevent>=24.11.1",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "openai>=1.57.2",
    "python-dotenv>=1.0.1",
    "sift-stack-py>=0.2.2",
    "slack-sdk>=3.33.5",
    "werkzeug>=3.1.3",
]
